Addressing visibility issues on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,7 +54,7 @@ nav {
         padding-right: .25em;
         
         a {
-            font-size: 1em;
+            font-size: .75em;
             color: white;
             text-decoration: none;
         }
